adds homework assignments

--- a/class_notes/class3/raster_analysis.Rmd
+++ b/class_notes/class3/raster_analysis.Rmd
@@ -514,7 +514,7 @@ micro-level urban population changes in the Coronavirus era .
 
 There are many useful analytic operations one can perform with rasters; one of the most useful ones for social scientists is the calculation of zonal statistics. Zonal statistics refers to the process of calculating summary statistics using a raster dataset, with respect to area(s) defined by a vector GIS dataset. Let's take a simple example. Let's say that we want to calculate the population in each NYC borough, based on the cell-level information in our raster. We can use apply zonal statistics on on our polygon layer of NYC boroughs (```nyc_boroughs_4326```) to take the sum of each Borough's cell values, thereby yielding an estimate of each borough's population. 
 
-There are many ways to compute zonal statistics in R, but the fastest and most intuitive way is to use a package called *exactextract*; see this [page](https://github.com/isciences/exactextract) for more details on how it works (for instance, how it calculates statistics for cells that are partially within a polygon and partially without). In the code below, we'll take the sum of cell values for each borough by using the ```exact_extract()``` function. The first argument, ```nyc_2019_population```, specifies the raster that we are using in the calculation; the second argument, ```nyc_2019_population```, specifies the vector dataset that contains the zones (here, boroughs) with respect to which the calculation is made; and the third argument, ```fun="sum"``` specifies the nature of the calculation (i.e. we want to add up cell values for each borough, as opposed, say, to taking the mean, or extracting the minimum or maximum value). The ```exact_extract()``` function returns a numeric vector, where each element is the raster summary statistic for the zones defined by the vector dataset; we'll assign this vector to an object named ```nyc_boroughs_population_zonal```:
+There are many ways to compute zonal statistics in R, but the fastest and most intuitive way is to use a package called *exactextractr*; see this [page](https://github.com/isciences/exactextract) for more details on how it works (for instance, how it calculates statistics for cells that are partially within a polygon and partially without). In the code below, we'll take the sum of cell values for each borough by using the ```exact_extract()``` function. The first argument, ```nyc_2019_population```, specifies the raster that we are using in the calculation; the second argument, ```nyc_2019_population```, specifies the vector dataset that contains the zones (here, boroughs) with respect to which the calculation is made; and the third argument, ```fun="sum"``` specifies the nature of the calculation (i.e. we want to add up cell values for each borough, as opposed, say, to taking the mean, or extracting the minimum or maximum value). The ```exact_extract()``` function returns a numeric vector, where each element is the raster summary statistic for the zones defined by the vector dataset; we'll assign this vector to an object named ```nyc_boroughs_population_zonal```:
 
 ```{r, message=F, warning=F, results=F}
 # Extract total population in each borough by taking sum of grid cell values in "nyc_2019_population" raster for each zone defined by "nyc_boroughs_4326" (here, "zones" are boroughs)
