--- a/class_notes/class4/rs_presentation/rs_gee_presentation.Rmd
+++ b/class_notes/class4/rs_presentation/rs_gee_presentation.Rmd
@@ -59,4 +59,4 @@ As you might imagine, remote sensing is an essential tool for earth scientists a
 * Dealing with very large datasets, or want to implement complex algorithms? 
 
 
-
+test
