--- a/class_notes/class4/rs_presentation/rs_gee_presentation.Rmd
+++ b/class_notes/class4/rs_presentation/rs_gee_presentation.Rmd
@@ -47,15 +47,52 @@ knitr::include_graphics('/Users/adra7980/Documents/git_repositories/ARSC5040_GIS
 * <font size="3">This diagram is a visual representation of the differing spectral signatures of common objects found on the surface of the earth. </font>
   * <font size="3">For example, at a wavelength of 800nm (within the near-infrared region of the electromagnetic spectrum), snow and ice have high reflectance signatures, while clear water has a very low reflectance signature. We can use these differing spectral signatures to make inferences about what sort of object is within a given pixel in a satellite image. </font>
 
-## Using spectral signatures to classify images: applied examples
-* Let's say you want to identify pixels in a satellite image with a high degree of live vegetation.
-* Different bands in a 
+## Using spectral signatures to classify images/pixels: Identifying live vegetation
+* <font size="3">Let's say you want to identify pixels in a satellite image with a high degree of live vegetation. </font>
+* <font size="3">Different bands in a satellite image raster dataset correspond to different regions of the electromagnetic spectrum (these bands correspond to Landsat 7) </font>
+* <font size="3">How could you use raster calculations to generate a new raster that will allow us to infer the amount of live vegetation in a given grid cell? Use the diagram below to inform your answer </font>
 
-```{r, echo=F, out.width='50%', out.height='50%'}
-knitr::include_graphics('/Users/adra7980/Documents/git_repositories/ARSC5040_GIS/class_notes/class4/rs_presentation/rs3.png')
+```{r, echo=F, out.width='28%', out.height='28%'}
+knitr::include_graphics('/Users/adra7980/Documents/git_repositories/ARSC5040_GIS/class_notes/class4/rs_presentation/rs4.png')
 ```
 
-## Example 1: The Normalized 
+## The Normalized Difference Vegetation Index (NDVI)
+* <font size="3">The intuition for the Normalized Difference Vegetation Index (NDVI) is basically what many of you would have inferred based on an examination of the spectral signature for natural vegetation. </font>
+* <font size="3">Live vegetation (due to its cellular structure) reflects large amounts of energy in the near-infrared region of the spectrum (Band 4, in Landsat 7), but reflects relatively much less energy in the red region of the spectrum (Band 3, in Landsat 7).</font>
+* <font size="3">The basic idea, then, is that we can subtract the reflectance values in the red band (Band 4) from the reflectance values in the near-infrared band (Band 7); where this difference is large in a given pixel, we can infer that it contains a large amount of live green vegetation (since a large difference is implied by green vegetation's spectral properties).</font> 
+* <font size="3">Dividing this difference by the sum of the reflectances in these bands, yields a normalized vegetation index (i.e. the NDVI) where cell values range from -1 (no vegetation) to 1 (highest possible density of green vegetation).</font> 
+
+## The Normalized Difference Vegetation Index (NDVI), continued
+
+In equation form,
+
+**NDVI**=$\frac{Near Infrared Band-Red Band}{Near Infrared Band + Red Band}$
+
+If you were using a Landsat 7 image to derive the NDVI, this would mean
+
+**NDVI**=$\frac{Band 4-Band 3}{Band4 + Band3}$
+
+## Satellite imagery and "big data"
+
+* <font size="4">In the hands-on exercise/lab, you will get some practice working with an NDVI raster; hopefully, you now have a sense of how the NDVI raster you'll work with was created using satellite imagery. </font>
+* <font size="4">You'll also get some practice working with a land-use raster, which was also generated using satellite imagery, and use of differential spectral signatures to classify pixels with respect to various land uses. </font>
+* <font size="4">While it is possible to work with satellite imagery, and the raster datasets derived from them, in R you may encounter problems stemming from the extremely large size of these datasets</font>
+* <font size="4">If you need to process, visualize, calculate, or model with extremely large satellite and satallite-derived datasets, you may find yourself quickly running out of processing power on your local machine </font>
+  * <font size="3"> Putting "big data" in perspective: Until very recently, only about 4% of the total Landsat data archive had actually been analyzed, given the lack of computational resources </font>
+
+## Satellite imagery and "big data", continued
+* <font size="4">In recent years, "big data" in the realm of remote sensing has rapidly transformed from obstacle to opportunity, with the emergence of high performancy computing and cloud data infrastructures that make it possible to process and analyze data at the petabyte scale. </font>
+* <font size="4">If you find yourself needing these computational resources, one place to seek assistance is the [Research Computing](https://www.colorado.edu/rc/) department at CU </font>
+* <font size="4">However, another option is to use [Google Earth Engine](earthengine.google.com), a "planetary-scale platform for Earth science data and analysis" developed by Google </font>
+* <font size="4">Earth Engine is free for academic and non-profit use (though it requires registration), and effectively gives you the ability to tap into Google's supercomputing resources directly from your web browser. </font>
+
+## The uses of Google Earth Engine 
+
+* Data archive; 
+* Dealing with very large datasets, or want to implement complex algorithms? 
+
+
+
 
 
 ## Remote Sensing: Social Science Applications
@@ -82,4 +119,8 @@ test
 
 
 https://gisgeography.com/spectral-signature/
+
+landsat bands: https://www.gisagmaps.com/landsat-band-designations/
+
+
 
